--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,11 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+  aws-ecr: circleci/aws-ecr@6.12.2
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  build-and-push:
     jobs:
-      - welcome/run
+      - aws-ecr/build-and-push-image:
+          account-url: 089207428304.dkr.ecr.ap-northeast-1.amazonaws.com
+          region: ap-northeast-1
+          repo: nginx
+          tag: ${CIRCLE_SHA1}
