--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ workflows:
   build-and-push:
     jobs:
       - aws-ecr/build-and-push-image:
-          account-url: 089207428304.dkr.ecr.ap-northeast-1.amazonaws.com
-          region: ap-northeast-1
+          account-url: AWS_ECR_ACCOUNT_URL
+          region: AWS_REGION
           repo: nginx
           tag: ${CIRCLE_SHA1}
